[gd_scene load_steps=8 format=3 uid="uid://ba6ysem0nugn7"]

[ext_resource type="Script" path="res://Scripts/pipe_1.gd" id="1_jjm5l"]
[ext_resource type="Texture2D" uid="uid://dsrmpkqfip7yk" path="res://Sprites/pipe-green.png" id="1_lnfon"]
[ext_resource type="PackedScene" uid="uid://dvqwt8j15fk82" path="res://Scenes/player.tscn" id="2_x6t21"]
[ext_resource type="AudioStream" uid="uid://dyylajw5akej7" path="res://audio/point.wav" id="4_b8hg3"]
[ext_resource type="AudioStream" uid="uid://brrrvq3pkt1wq" path="res://audio/hit.wav" id="5_6dbdd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmuso"]
size = Vector2(48, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kltri"]
size = Vector2(20, 128)

[node name="pipe" type="Area2D"]
position = Vector2(272, 72)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_jjm5l")
player_scene = ExtResource("2_x6t21")

[node name="pipe_down" type="Sprite2D" parent="."]
position = Vector2(0, 472)
texture = ExtResource("1_lnfon")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 472)
shape = SubResource("RectangleShape2D_kmuso")

[node name="pipe_up" type="Sprite2D" parent="."]
position = Vector2(0, -8.00001)
rotation = 3.14159
texture = ExtResource("1_lnfon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_kmuso")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Point" type="Area2D" parent="."]
position = Vector2(0, 232)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point"]
shape = SubResource("RectangleShape2D_kltri")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Point"]
stream = ExtResource("4_b8hg3")
volume_db = -15.0
area_mask = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6dbdd")
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Point" to="." method="_on_point_body_entered"]
